FIND_PACKAGE (SWIG REQUIRED)
INCLUDE (${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/pathfinder)

FILE (
    GLOB_RECURSE _source_list
    LIST_DIRECTORIES false
    RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c*"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h*"
)

FILE (
    GLOB_RECURSE _swig_list
    LIST_DIRECTORIES false
    RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.i"
)

#SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(${_swig_list} PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(${_swig_list} PROPERTIES SWIG_FLAGS "")
SET_PROPERTY(SOURCE ${_swig_list} PROPERTY SWIG_FLAGS "-namespace" "LateStartStudio.Search.Pathfinder")

SWIG_ADD_MODULE(search_native CSHARP ${_source_list} ${_swig_list})

SET_TARGET_PROPERTIES (search_native PROPERTIES PREFIX "")
